--- a/src/components/Cards.module.scss
+++ b/src/components/Cards.module.scss
@@ -2,10 +2,13 @@
   padding: 1ch 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   gap: 2ch;
   width: 100%;
   height: 100%;
+  @media (max-width: 768px) {
+    align-items: center;
+  }
 }
 
 
