--- a/src/pages/Links.module.scss
+++ b/src/pages/Links.module.scss
@@ -2,7 +2,7 @@
 .root{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center !important;
   justify-content: space-between;
   gap: 1ch;
   width: 100%;
