updated some formatting

--- a/src/components/ButtonCard.module.scss
+++ b/src/components/ButtonCard.module.scss
@@ -1,6 +1,5 @@
 .root {
-  max-width: 25.75ch;
-  min-width: 25.75ch;
+  width: 25.75ch;
   position: relative;
   display: flex;
   flex-direction: column;
