--- a/src/components/Calendar.module.scss
+++ b/src/components/Calendar.module.scss
@@ -11,11 +11,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  align-content: center;
   gap: 2ch;
   justify-content: space-between;
   flex-wrap: wrap;
-  width: 100%;
-  max-width: 30%;
+  width: 20ch;
   font-size: 2.2ch;
 }
 
