--- a/src/components/Biography.module.scss
+++ b/src/components/Biography.module.scss
@@ -5,6 +5,13 @@
   flex-wrap: wrap;
   margin: 0 auto;
   width: 100%;
+  @media (max-width: 768px) {
+    align-items: flex-start;
+    max-height: calc(100vh - 40ch);
+  }
+  @media (min-width: 768px) {
+    max-width: 50ch;
+  }
 }
 
 .content{
