--- a/src/components/ButtonCard.module.scss
+++ b/src/components/ButtonCard.module.scss
@@ -1,5 +1,5 @@
 .root {
-  width: 25.75ch;
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -13,7 +13,12 @@
   }
 }
 
+.base {
+  width: 100%;
+}
+
 .box {
+  width:100%;
   overflow: hidden;
 }
 
@@ -25,6 +30,7 @@
 }
 
 .title {
+  width:100%;
   overflow: hidden;
   text-overflow: ellipsis;
   font-weight: 600;
