--- a/src/components/page/Navbar.module.scss
+++ b/src/components/page/Navbar.module.scss
@@ -1,10 +1,10 @@
 .root{
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   padding: 1ch 0;
   gap: 3ch;
   width: 100%;
+  height: 5ch;
   margin: 0 auto;
   justify-content: space-between;
   
