--- a/src/pages/Contact.module.scss
+++ b/src/pages/Contact.module.scss
@@ -1,11 +1,10 @@
-
-.root{
+.root {
   display: flex;
+  align-items: center;
   flex-direction: column;
-  gap: 1ch;
+  gap: 5ch;
   width: 100%;
   height: 100%;
-  @media (min-width: 768px) {
-    max-width: 35ch;
-  }
 }
+
+
