--- a/src/components/page/Navbar.module.scss
+++ b/src/components/page/Navbar.module.scss
@@ -22,6 +22,7 @@
   font-size: var(--font-size);
   font-weight: var(--theme-font-weight-bold);
   color: var(--theme-text);
+  cursor: pointer;
 }
 
 @keyframes blink {
