--- a/src/components/ButtonCard.module.scss
+++ b/src/components/ButtonCard.module.scss
@@ -13,13 +13,10 @@
   }
 }
 
-.base {
-  width: 100%;
-}
-
 .box {
-  width:100%;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  
 }
 
 .size {
