--- a/src/components/ButtonCard.module.scss
+++ b/src/components/ButtonCard.module.scss
@@ -8,9 +8,12 @@
   margin: 0;
   border-radius: var(--theme-border-radius);
   box-shadow: var(--theme-box-shadow);
-  @media (max-width: 768px) {
-    min-width: 50ch;
-  }
+  min-width: 100%;
+}
+
+.base {
+  padding: 1ch;
+  width: 100%;
 }
 
 .box {
