some css updates

--- a/src/global.scss
+++ b/src/global.scss
@@ -134,7 +134,7 @@ video {
   margin: 0;
   padding: 0;
   vertical-align: baseline;
-  transition: background-color 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 a {
