--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -6,10 +6,12 @@
   height: 100%;
   align-items: flex-start;
   justify-content: center;
+  @media (min-width: 768px) {
+    max-width: 50ch;
+  }
 }
 .switcher {
   display: flex;
-  width: 100%;
   flex-direction: row;
   justify-content: flex-start;
   gap: 2ch;
