--- a/src/global.scss
+++ b/src/global.scss
@@ -134,7 +134,8 @@ video {
   margin: 0;
   padding: 0;
   vertical-align: baseline;
-  transition: all 0.5s ease-in-out;
+  transition-property: background, color, border, fill, stroke, opacity, transform;
+  transition: 0.5s ease-in-out;
 }
 
 a {
