--- a/src/global.scss
+++ b/src/global.scss
@@ -134,8 +134,7 @@ video {
   margin: 0;
   padding: 0;
   vertical-align: baseline;
-  transition-property: background, color, border, fill, stroke, opacity, transform;
-  transition: 0.5s ease-in-out;
+  transition: background-color 0.5s ease-in-out;
 }
 
 a {
