--- a/src/components/ButtonCards.module.scss
+++ b/src/components/ButtonCards.module.scss
@@ -1,8 +1,50 @@
 .root {
   display: flex;
+  gap: 2ch;
   flex-wrap: wrap;
   justify-content: flex-start;
   width: 100%;
   height: 100%;
   
+}
+.cardroot {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  align-items: center;
+  margin: 0;
+  border-radius: var(--theme-border-radius);
+  box-shadow: var(--theme-box-shadow);
+  min-width: 100%;
+}
+
+.base {
+  padding: 0 1ch;
+  width: 100%;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.size {
+  padding: 0 0.5ch;
+  background: var(--theme-background-modal-footer);
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  width:100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-weight: 600;
+  text-align: center;
+  font-size: var(--font-size);
+  font-family: var(--font-family-mono);
+  text-transform: uppercase;
 }
