--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -10,6 +10,11 @@
     max-width: 50ch;
   }
 }
+
+.base {
+  height: 100%;
+  width: 100%;
+}
 .switcher {
   display: flex;
   width: 100%;
@@ -36,6 +41,7 @@
     display: none;
   }
 }
+
 .mobile {
   display: none;
   @media (max-width: 768px) {
@@ -43,3 +49,12 @@
   }
 }
 
+.cards{
+  padding: .5ch 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2ch;
+  width: 100%;
+  height: 100%;
+}
