--- a/src/pages/Links.module.scss
+++ b/src/pages/Links.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   gap: 1ch;
   width: 100%;
-  height: 100%;
+  height: min-content;
   @media (min-width: 768px) {
     max-width: 50ch;
   }
