--- a/src/pages/Portfolio.module.scss
+++ b/src/pages/Portfolio.module.scss
@@ -1,12 +1,9 @@
 
 .root{
   display: flex;
+  justify-content: center;
   flex-direction: column;
   gap: 1ch;
   width: 100%;
   height: 100%;
-  @media (min-width: 768px) {
-    max-width: 50ch;
-  }
-  
 }
