--- a/src/components/ItemBoxes.module.scss
+++ b/src/components/ItemBoxes.module.scss
@@ -1,8 +1,9 @@
 .root{
   padding: .5ch 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  align-content: center;
   justify-content: center;
   gap: 2ch;
   width: fit-content;
@@ -12,6 +13,7 @@
 .base{
   height: 100%;
   cursor: pointer;
+  align-content: center;
   transition: transform .2s ease-in-out;
   transform: translateY(0);
   &:hover{
