--- a/src/components/ItemBoxes.module.scss
+++ b/src/components/ItemBoxes.module.scss
@@ -1,24 +1,34 @@
 .root{
   padding: .5ch 0;
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
   align-content: center;
   justify-content: center;
+  background-color: var(--theme-background);
   gap: 2ch;
-  width: fit-content;
-  height: fit-content;
+  width: 100%;
 }
 
 .base{
   height: 100%;
+  width: 100%;
+  position: absolute;
   cursor: pointer;
-  align-content: center;
+  align-content: flex-start;
   transition: transform .2s ease-in-out;
   transform: translateY(0);
   &:hover{
-    transform: translateY(-1ch);
+    transform: translateY(-25ch) !important;
   }
+}
+
+.label{
+  border-radius: 1ch 1ch 0 0;
+  border: solid var(--theme-text);
+  border-width: 2px 2px 0 2px;
+  background-color: var(--theme-background);
 }
 
 .imgbox{
