--- a/src/components/ButtonCards.module.scss
+++ b/src/components/ButtonCards.module.scss
@@ -4,8 +4,6 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   width: 100%;
-  height: 100%;
-  
 }
 .cardroot {
   width: 100%;
@@ -21,8 +19,10 @@
 }
 
 .base {
-  padding: 0 1ch;
   width: 100%;
+  @media (max-width: 768px) {
+    padding: 0 1ch;
+  }
 }
 
 .box {
