--- a/src/components/Biography.module.scss
+++ b/src/components/Biography.module.scss
@@ -15,6 +15,33 @@
   }
 }
 
+.desc {
+  display: flex;
+  flex-direction: row;
+  gap: 1ch;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 100%;
+  @media (max-width: 768px) {
+    align-items: flex-start;
+    max-height: calc(100vh - 40ch);
+  }
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 1ch;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: space-between;
+  width: 100%;
+  @media (max-width: 768px) {
+    align-items: flex-start;
+    max-height: calc(100vh - 40ch);
+  }
+}
+
 .content{
   display: flex;
   flex-direction: column;
