--- a/src/sacred/ActionBar.module.scss
+++ b/src/sacred/ActionBar.module.scss
@@ -1,3 +1,5 @@
 .root {
-  background: var(--theme-background);
+  padding: 0;
+  margin: 0;
+  background-color: var(--theme-button-background);
 }
