--- a/src/sacred/ActionButton.module.scss
+++ b/src/sacred/ActionButton.module.scss
@@ -1,23 +1,18 @@
 .hotkey {
-  background: var(--theme-button-foreground);
-  color: var(--theme-text);
   cursor: pointer;
   flex-shrink: 0;
   font-weight: 400;
-  padding: 0 1ch 0 1ch;
   text-indent: 0ch;
   user-select: none;
 }
 
 .icon {
-  padding: 0 .5ch 0 .5ch;
-  vertical-align: top;
-  background: var(--theme-button-foreground);
-  height: calc(var(--theme-line-height-base) * var(--font-size));
+  display: flex;
+  height: 2.1ch;
+  filter: invert(1) grayscale(1) brightness(0.5);
 }
 
 .content {
-  background: var(--theme-button-background);
   box-shadow: inset 0 0 0 2px var(--theme-button-foreground);
   cursor: pointer;
   flex-shrink: 0;
@@ -29,6 +24,7 @@
 }
 
 .root {
+  background-color: var(--theme-button-background);
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
@@ -36,13 +32,14 @@
   outline: 0;
   border: 0;
   margin: 0;
-  padding: 0;
+  gap: .25ch;
+  padding: .3ch;
   box-sizing: border-box;
   font-family: var(--font-family-mono);
   font-size: var(--font-size);
   flex-shrink: 0;
 
-  &:hover .hotkey {
+  &:hover {
     background: var(--theme-focused-foreground);
   }
 
