updated some animations

--- a/src/sacred/AlertBanner.module.scss
+++ b/src/sacred/AlertBanner.module.scss
@@ -6,9 +6,7 @@
   padding: 1ch;
   font-weight: 400;
   
-  &:hover {
-    box-shadow: 1ch 1ch 0 0 var(--theme-focused-foreground-subdued);
-  }
+  
 
 
   &:focus  {
@@ -19,7 +17,13 @@
 .onClick {
   cursor: pointer;
 }
+.hover{
+ &:hover {
+    box-shadow: 1ch 1ch 0 0 var(--theme-focused-foreground-subdued);
+  } 
+}
 
 .selected {
+  
   box-shadow: 1ch 1ch 0 0 var(--theme-focused-foreground) !important;
 }
