--- a/src/components/Biography.module.scss
+++ b/src/components/Biography.module.scss
@@ -22,6 +22,8 @@
   flex-wrap: wrap;
   margin: 0 auto;
   width: 100%;
+  min-width: 29ch;
+  
 }
 
 .buttons {
@@ -32,6 +34,42 @@
   margin: 0 auto;
   justify-content: space-between;
   width: 100%;
+  
+  @media (max-width: 568px) {
+    display: none;
+  }
+  @media (max-width: 768px) {
+    div {
+    background-color: var(--theme-button-background);
+    }
+  }
+}
+
+.icons{
+  display: flex;
+  flex-direction: row;
+  gap: 1ch;
+  max-width: 30%;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: flex-end;
+  width: 100%;
+  
+  @media (min-width: 568px) {
+    display: none;
+  }
+}
+
+.desktop {
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
+
+.mobile {
+  @media (min-width: 568px) {
+    display: none;
+  }
 }
 
 .content{
