--- a/src/sacred/ActionButton.module.scss
+++ b/src/sacred/ActionButton.module.scss
@@ -9,7 +9,8 @@
 .icon {
   display: flex;
   height: 2.1ch;
-  filter: invert(1) grayscale(1) brightness(0.5);
+  filter: invert(1) grayscale(1) brightness(.5) contrast(1.5);
+  
 }
 
 .content {
@@ -24,7 +25,6 @@
 }
 
 .root {
-  background-color: var(--theme-button-background);
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
@@ -53,6 +53,14 @@
 
   &:focus .content {
     box-shadow: inset 0 0 0 2px var(--theme-focused-foreground);
+  }
+  @media (max-width: 768px) {
+    &:hover {
+      background: unset !important;
+    }
+  }
+  @media (min-width: 768px) {
+    background-color: var(--theme-button-background);
   }
 }
 
