--- a/src/sacred/Avatar.module.scss
+++ b/src/sacred/Avatar.module.scss
@@ -115,5 +115,9 @@ a {
 .right {
   min-width: 10%;
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   background: var(--theme-foreground);
 }
