--- a/src/pages/Contact.module.scss
+++ b/src/pages/Contact.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 5ch;
+  padding: 1ch 0;
+  justify-content: flex-start;
   width: 100%;
   height: 100%;
 }
