--- a/src/sacred/ActionButton.module.scss
+++ b/src/sacred/ActionButton.module.scss
@@ -10,6 +10,13 @@
   display: flex;
   height: 2.1ch;
   filter: invert(1) grayscale(1) brightness(.5) contrast(1.5);
+  transform: scale(1);
+  @media (max-width: 768px) {
+  &:hover {
+    transform: scale(1.1);
+  filter: invert(1) grayscale(1) brightness(.4) contrast(1.5);
+  }
+  }
   
 }
 
