--- a/src/components/style/ContactForm.module.scss
+++ b/src/components/style/ContactForm.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   background-color: var(--theme-background-input );
   @media (min-width: 768px) {
-    max-width: 50ch;
+    max-width: 90%;
   }
 }
 
