--- a/src/components/style/Navbar.module.scss
+++ b/src/components/style/Navbar.module.scss
@@ -23,6 +23,7 @@
   font-weight: var(--theme-font-weight-bold);
   color: var(--theme-text);
   cursor: pointer;
+  z-index: 100;
 }
 
 @keyframes blink {
