--- a/src/global.scss
+++ b/src/global.scss
@@ -49,11 +49,13 @@
 }
 
 canvas {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: absolute;
     z-index: 0;
     top: 0;
+    bottom: 0;
+    right: 0;
     left: 0;
 }
 
