--- a/src/components/style/Navbar.module.scss
+++ b/src/components/style/Navbar.module.scss
@@ -37,7 +37,7 @@
   display: inline-block;
   min-width: 1ch;
   background: var(--theme-text);
-  height: calc(var(--font-size) * var(--theme-line-height-base));
+  height: .2ch;
   vertical-align: bottom;
 }
 
