--- a/src/components/style/Navbar.module.scss
+++ b/src/components/style/Navbar.module.scss
@@ -18,7 +18,7 @@
 .title{
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end;
   font-size: var(--font-size);
   font-weight: var(--theme-font-weight-bold);
   color: var(--theme-text);
