--- a/src/components/style/Navbar.module.scss
+++ b/src/components/style/Navbar.module.scss
@@ -1,7 +1,7 @@
 .root{
   display: flex;
   flex-direction: row;
-  padding: 1ch 0;
+  padding: 1.5ch 2.5ch;
   gap: 3ch;
   width: 100%;
   height: 5ch;
@@ -10,6 +10,7 @@
   
   align-items: flex-start;
   @media (max-width: 768px) {
+    padding: 1ch 0;
     justify-content: center;
     align-items: center !important;
   }
