--- a/src/components/style/Navbar.module.scss
+++ b/src/components/style/Navbar.module.scss
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  font-size: var(--font-size);
+  font-size: 11px;
   font-weight: var(--theme-font-weight-bold);
   color: var(--theme-text);
   cursor: pointer;
