--- a/src/components/style/Biography.module.scss
+++ b/src/components/style/Biography.module.scss
@@ -6,8 +6,8 @@
   margin: 0 auto;
   width: 100%;
   @media (max-width: 768px) {
-    align-items: flex-start;
-    max-height: calc(100vh - 40ch);
+    align-items: flex-end;
+    //max-height: calc(100vh - 40ch);
     max-width: 50ch;
   }
   @media (max-width: 568px) {
