--- a/src/components/style/Navbar.module.scss
+++ b/src/components/style/Navbar.module.scss
@@ -7,6 +7,9 @@
   height: 5ch;
   margin: 0 auto;
   justify-content: space-between;
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
   
   align-items: flex-start;
   @media (max-width: 768px) {
