--- a/src/style/Work.module.scss
+++ b/src/style/Work.module.scss
@@ -2,12 +2,16 @@
 .root{
   display: flex;
   flex-direction: column;
-  padding: 1ch 0;
   gap: 1ch;
   width: 100%;
-  height: 100%;
+  align-self: center;
   @media (min-width: 768px) {
     max-width: 50ch;
   }
   
+}
+.footer {
+  padding: 1ch;
+  display: grid;
+  align-self: end;
 }
