--- a/src/components/style/Timeline.module.scss
+++ b/src/components/style/Timeline.module.scss
@@ -1,7 +1,19 @@
 .root{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  gap: 1ch;
+  width: 100%;
+  text-align: center;
+  @media (min-width: 768px) {
+    max-width: 50ch;
+  }
+}
+
+.box{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   gap: 1ch;
   width: 100%;
   text-align: center;
@@ -38,6 +50,7 @@
   background: var(--theme-text);
   display: block;
   flex-shrink: 0;
-  height: 35px;
+  min-height: 10px;
+  max-height: 100px;
   width: 2px;
 }
