--- a/src/sacred/ModalStack.module.scss
+++ b/src/sacred/ModalStack.module.scss
@@ -6,6 +6,7 @@
   left: 0;
   pointer-events: none;
   position: fixed;
+  overflow: hidden;
   right: 0;
   top: 0;
   z-index: var(--z-index-page-modals);
