--- a/src/style/Contact.module.scss
+++ b/src/style/Contact.module.scss
@@ -1,11 +1,42 @@
 .root {
   display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding: 1ch 0;
-  justify-content: flex-start;
+  padding: 0 1ch;
   width: 100%;
   height: 100%;
+  justify-content: center;
+  gap: 2ch;
+  @media (min-width: 768px) {
+    flex-direction: column;
+    flex-direction: row !important;
+  }
+  
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 1ch;
+  padding: 1ch 0;
+  justify-content: flex-start;
+  height: 100%;
+  @media (min-width: 768px) {
+    min-width: 50ch;
+  }
+}
 
+.buttons {
+  margin-top: 1ch;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1ch;
+  justify-content: flex-start;
+  height: 100%;
+  
+}
+
+.footer {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+}
