fixed form width

--- a/src/style/Contact.module.scss
+++ b/src/style/Contact.module.scss
@@ -17,6 +17,7 @@
   flex-direction: column;
   gap: 1ch;
   padding: 1ch 0;
+  width: 100%;
   justify-content: flex-start;
   height: 100%;
   @media (min-width: 768px) {
