--- a/src/style/Contact.module.scss
+++ b/src/style/Contact.module.scss
@@ -21,6 +21,7 @@
   justify-content: flex-start;
   height: 100%;
   @media (min-width: 768px) {
+    align-items: center;
     min-width: 50ch;
   }
 }
