--- a/src/components/style/Biography.module.scss
+++ b/src/components/style/Biography.module.scss
@@ -15,6 +15,13 @@
     width: 50ch;
   }
 }
+.ascii {
+  position: absolute;
+  display: block;
+  width: 70ch;
+  bottom: 2ch;
+  height: 10ch;
+}
 
 .desc {
   display: flex;
