--- a/src/sacred/DatePicker.module.scss
+++ b/src/sacred/DatePicker.module.scss
@@ -1,5 +1,6 @@
 .root {
   display: inline-block;
+  height: 100%;
   user-select: none;
 }
 
@@ -55,8 +56,10 @@
   outline: none;
   padding: 0 1ch 0 1ch;
   text-align: center;
+  cursor: pointer;
 
-  &:focus {
+  
+}
+.selectedCell {
     background: var(--theme-focused-foreground);
-  }
 }
