--- a/src/components/book/Timeform.module.scss
+++ b/src/components/book/Timeform.module.scss
@@ -20,6 +20,16 @@
   gap: unset;
 }
 
+.noSlots {
+  display: flex;
+  width: 100%;
+  min-height: 4ch;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5ch;
+}
+
 .card {
   display: flex;
   flex-direction: row;
