--- a/src/components/style/Footer.module.scss
+++ b/src/components/style/Footer.module.scss
@@ -4,6 +4,10 @@
   height: 5ch;
   margin-top: 1ch;
   width: 100%;
+  justify-content: center;
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
   
  
   @media (max-width: 768px) {
