--- a/src/style/Contact.module.scss
+++ b/src/style/Contact.module.scss
@@ -32,7 +32,7 @@
   align-items: center;
   flex-direction: column;
   gap: 1ch;
-  justify-content: flex-start;
+  justify-content: center;
   height: 100%;
   
 }
