--- a/src/style/Contact.module.scss
+++ b/src/style/Contact.module.scss
@@ -32,9 +32,9 @@
   align-items: center;
   flex-direction: column;
   gap: 1ch;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100%;
-  
+  text-align: center;
 }
 
 .footer {
