--- a/src/components/style/Biography.module.scss
+++ b/src/components/style/Biography.module.scss
@@ -2,18 +2,46 @@
   display: flex;
   flex-direction: column;
   gap: 1ch;
+  height: auto;
   flex-wrap: wrap;
   margin: 0 auto;
   width: 100%;
-  @media (max-width: 768px) {
-  padding:0  2ch;
+  @media (max-width: 668px) {
+    padding:0  2ch;
     align-items: flex-end;
     //max-height: calc(100vh - 40ch);
     max-width: 50ch;
   }
-  @media (min-width: 768px) {
+  @media (min-width: 668px) {
     width: 50ch;
   }
+}
+
+.playing {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1ch;
+}
+.nowplaying {
+  align-items: center;
+  color: var(--theme-text);
+  fill: var(--theme-text);
+  display: flex;
+  flex-direction: row;
+  gap: 1ch;
+  
+}
+#game {
+    font-weight: bold;
+    &:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+#time {
+color: var(--theme-text-secondary);
+font-size: 0.8em;
 }
 .ascii {
   position: absolute;
@@ -24,14 +52,24 @@
 }
 
 .desc {
-  display: flex;
-  flex-direction: row;
+  display: grid;
   gap: 1ch;
-  flex-wrap: wrap;
   margin: 0 auto;
   width: 100%;
   min-width: 29ch;
   
+}
+
+.game {
+  &:hover {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
+
+.time {
+  color: var(--theme-text-secondary);
+  font-size: 0.8em;
 }
 
 .buttons {
@@ -43,7 +81,7 @@
   justify-content: space-between;
   width: 100%;
   
-  @media (max-width: 568px) {
+  @media (max-width: 668px) {
     display: none;
   }
   @media (max-width: 768px) {
@@ -57,25 +95,25 @@
   display: flex;
   flex-direction: row;
   gap: 1ch;
-  max-width: 30%;
+  max-width: 7ch;
   flex-wrap: wrap;
   margin: 0 auto;
-  justify-content: flex-end;
+  justify-content: center;
   width: 100%;
   
-  @media (min-width: 568px) {
+  @media (min-width: 668px) {
     display: none;
   }
 }
 
 .desktop {
-  @media (max-width: 768px) {
+  @media (max-width: 668px) {
     display: none;
   }
 }
 
 .mobile {
-  @media (min-width: 568px) {
+  @media (min-width: 668px) {
     display: none;
   }
 }
