--- a/src/components/style/Homeview.module.scss
+++ b/src/components/style/Homeview.module.scss
@@ -63,9 +63,7 @@
 }
 
 .desktop {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  display: block;
   @media (max-width: 768px) {
     display: none;
   }
