--- a/src/components/style/Homeview.module.scss
+++ b/src/components/style/Homeview.module.scss
@@ -44,7 +44,7 @@
 .avatar{
   height: 8ch !important;
   width: 8ch !important;
-  border-radius: 50%;
+  //border-radius: 50%;
   &:hover {
     &::before {
       background: unset !important;
