--- a/src/sacred/AlertBanner.module.scss
+++ b/src/sacred/AlertBanner.module.scss
@@ -14,6 +14,20 @@
   }
 }
 
+button {
+  width: 100%;
+  background: none;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+  display: inline-block;
+  font: inherit;
+  line-height: inherit;
+  margin: 0;
+  outline: 0;
+  padding: 0;
+}
+
 .onClick {
   cursor: pointer;
 }
