--- a/src/components/style/Biography.module.scss
+++ b/src/components/style/Biography.module.scss
@@ -23,6 +23,29 @@
   flex-wrap: wrap;
   gap: 1ch;
 }
+
+// spinning animation
+.spinner{
+  svg{
+    //transform x 
+    display: flex;
+    justify-self: center;
+    width: 1.05em;
+    height: 1.05em;
+    animation-name: ckw;
+    animation-duration: 10.5s;
+  }
+}
+@keyframes ckw {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
 .nowplaying {
   min-width: 6.5ch;
   align-items: center;
@@ -31,6 +54,10 @@
   display: flex;
   flex-direction: row;
   gap: 1ch;
+  svg {
+    height: 1.051em;
+    width: 1.05em;
+  }
   
 }
 #game {
