--- a/src/components/style/Biography.module.scss
+++ b/src/components/style/Biography.module.scss
@@ -27,8 +27,7 @@
 // spinning animation
 .spinner{
   svg{
-    //transform x 
-    display: flex;
+    display: block;
     justify-self: center;
     width: 1.05em;
     height: 1.05em;
