--- a/src/components/style/Biography.module.scss
+++ b/src/components/style/Biography.module.scss
@@ -32,7 +32,9 @@
     width: 1.05em;
     height: 1.05em;
     animation-name: ckw;
-    animation-duration: 10.5s;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
   }
 }
 @keyframes ckw {
