fix toastify issue??

--- a/src/global.scss
+++ b/src/global.scss
@@ -577,6 +577,12 @@ body {
   }
 }
 
+.Toastify {
+  button {
+    width: auto;
+  }
+}
+
 .scramble {
   overflow: hidden;
   word-break: break-word;
