--- a/src/pages/style/Projects.module.scss
+++ b/src/pages/style/Projects.module.scss
@@ -9,8 +9,16 @@
   }
 }
 .app {
+  text-align: left;
   &:hover,&:focus {
     cursor: pointer;
+    div:has(div) div{
+      background-color: var(--theme-focused-foreground);
+    }
+  }
+  box-shadow: 1ch 1ch 0 0 var(--theme-border-subdued);
+  section {
+    padding: 1ch;
   }
 }
 .appInfo{
@@ -33,11 +41,14 @@
     transition: unset;
   }
 }
+
+  
+
 .root{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 2ch;
+  gap: 0.25ch;
   width: 100%;
   align-self: center;
   @media (min-width: 768px) {
