--- a/src/pages/style/Work.module.scss
+++ b/src/pages/style/Work.module.scss
@@ -4,11 +4,18 @@
   flex-direction: column;
   gap: 0.5ch;
   width: 100%;
+  overflow: hidden;
+  height: 100%;
   align-self: center;
   @media (min-width: 768px) {
-    max-width: 50ch;
+      max-width: 70%;
   }
   
+}
+.pdf {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 .footer {
   padding: 1ch;
